fixed overflow and images of first container

--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,7 @@ html {
   margin: 0;
   padding: 0;
   font-family: 'Roboto', sans-serif;
+  overflow-x: hidden;
 }
 
 a {
@@ -122,19 +123,26 @@ a {
 
 .article-row2-title {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-end;
+  align-items: flex-start;
   flex-direction: column;
+  height: 146px;
   color: white;
   font-size: 2em;
   padding: 10px;
 }
 
-.article-row2-title h1 {
+.article-row2-title h2 {
   margin-bottom: 5px;
+  font-family: Avalon,sans-serif;
+  font-size: 20px;
+  letter-spacing: -.015em;
 }
 
 .article-row2-title p {
-  font-size: 0.7em;
+  font-size: 13px;
+  font-family: 'Roboto', sans-serif;
+  color: rgb(172, 167, 167);
 }
 
 .articles-row2-dates {
@@ -484,6 +492,10 @@ article.section-middle-articles {
     display: none;
   }
 
+  body {
+    overflow-X: hidden;
+  }
+
   .d-md-flex {
     display: flex;
   }
@@ -608,7 +620,7 @@ article.section-middle-articles {
     font-size: 1em;
     padding: 10px;
   }
-
+  
   .story-investments {
     display: flex;
     justify-content: space-around;
@@ -650,6 +662,11 @@ article.section-middle-articles {
 
   .latest-news-container {
     grid-template-columns: repeat(4, 1fr);
+  }
+
+  .feed-title h3 {
+    font-size: 10px;
+
   }
 
   .d-lg-grid {
